# erista

./: README.md
doppel/: CMakeLists.txt  package.xml
doppel_base/: CMakeLists.txt  package.xml
doppel_base/config/: doppel.rviz  ns_doppel.rviz
doppel_base/launch/: base.launch
doppel_control/: CMakeLists.txt  package.xml
doppel_control/config/: joint_state_controller.yaml  twist_jogger.yaml
doppel_control/config/mofpy/: common.yaml
doppel_control/config/mofpy/presets/: arm.yaml  chassis.yaml
doppel_control/launch/: control.launch  mofpy.launch  teleop.launch  twist_jogger.launch
doppel_description/: .gitignore  CMakeLists.txt  package.xml
doppel_description/launch/: description.launch
doppel_description/meshes/: link2.dae
doppel_description/rviz/: moveit.rviz
doppel_description/urdf/: doppel.urdf.xacro  doppel_robot.urdf.xacro  macros.urdf.xacro  materials.urdf.xacro
doppel_gazebo/: CMakeLists.txt  package.xml
doppel_gazebo/launch/: doppel_empty_world.launch  doppel_namespace_teleop.launch  doppel_teleop.launch  rviz.launch  spawn_doppel.launch
doppel_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
doppel_moveit_config/config/: doppel.srdf  kinematics.yaml  ompl_planning.yaml
doppel_moveit_config/launch/: default_warehouse_db.launch  demo.launch  doppel_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
doppel_moveit_config/urdf/: doppel.urdf
erista/: CMakeLists.txt  package.xml
erista_base/: CMakeLists.txt  package.xml
erista_base/config/: erista.rviz  ns_erista.rviz
erista_base/launch/: base.launch
erista_control/: CMakeLists.txt  package.xml
erista_control/config/: dynamixels.yaml  joint_state_controller.yaml  joint_trajectory_controller.yaml  pid_gazebo.yaml  pid_real.yaml  twist_jogger.yaml
erista_control/config/mofpy/: common.yaml
erista_control/config/mofpy/presets/: arm.yaml  arm_fk.yaml
erista_control/launch/: control.launch  mofpy.launch  teleop.launch  twist_jogger.launch
erista_description/: CMakeLists.txt  package.xml
erista_description/launch/: description.launch
erista_description/meshes/: base.dae  link1.dae  link4.dae  link5.dae  link6.dae
erista_description/urdf/: erista.urdf.xacro  erista_robot.urdf.xacro  macros.urdf.xacro
erista_gazebo/: CMakeLists.txt  package.xml
erista_gazebo/launch/: erista_empty_world.launch  erista_namespace_teleop.launch  erista_teleop.launch  rviz.launch  spawn_erista.launch
erista_moveit_config/: .gitignore  .setup_assistant  CMakeLists.txt  package.xml
erista_moveit_config/config/: controllers.yaml  erista.srdf  joint_limits.yaml  kinematics.yaml
erista_moveit_config/launch/: default_warehouse_db.launch  demo.launch  erista_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
