<?xml version="1.0"?>
<package format="2">
  <name>doppel_control</name>
  <version>0.0.0</version>
  <description>The doppel_control package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/doppel</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>doppel_description</exec_depend>
  <exec_depend>doppel_moveit_config</exec_depend>
  <exec_depend>mofpy</exec_depend>
  <exec_depend>twist_jogger</exec_depend>

  <export>
  </export>
</package>
