<?xml version="1.0"?>
<package format="2">
  <name>erista_control</name>
  <version>0.0.0</version>
  <description>The erista_control package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/erista</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>erista_description</exec_depend>
  <exec_depend>erista_moveit_config</exec_depend>
  <exec_depend>mofpy</exec_depend>
  <exec_depend>twist_jogger</exec_depend>

  <export>
  </export>
</package>
