<?xml version="1.0"?>
<package format="2">
  <name>erista_gazebo</name>
  <version>0.0.0</version>
  <description>The erista_gazebo package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/erista</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>erista_bringup</exec_depend>
  <exec_depend>erista_description</exec_depend>

  <export>
  </export>
</package>
